recaptcha is now really working, wrote my own helper methods; made some fixes to the stylesheet; added author and email to the schedule
Signed-off-by: sch1zo <andreas.eger.reg@googlemail.com>

--- a/style/_defaults.sass
+++ b/style/_defaults.sass
@@ -83,9 +83,10 @@ h2, h3, h4, h5, h6
 h1
   +adjust-font-size-to(21px)
   +trailer(1, 21px)
-
-h1
   @extend .allcaps
+
+//h2
+  @extend .allcaps  
 
 h3
   font-weight: bold
