--- a/style/screen.sass
+++ b/style/screen.sass
@@ -18,14 +18,16 @@
 
 h1
   +full
-  +prefix(3)
-  +adjust-font-size-to(25px)
-  +leader(1,25px)
+  +prefix(1)
+  +adjust-font-size-to(21px)
+  //+leader(1,25px)
   +trailer(1,25px)
 
 h2
   +full
+  +prefix(1)
   +adjust-font-size-to(18px)
+  margin-bottom: 10px
   //+trailer(1,10px)
 
 a
@@ -46,7 +48,7 @@ a
     a
       float: left
       margin: 2px
-  #auth
+  //#auth
     .auth_provider
       +adjust-font-size-to(11px)
       float: right
@@ -77,7 +79,6 @@ div[role="main"]
     .controls
       float: left
       padding-right: .4em
-      
     .items
       +no-bullets
       +adjust-font-size-to(18px)
@@ -85,6 +86,8 @@ div[role="main"]
         padding-left: 1.3em
       .level2
         padding-left: 2.6em
+  textarea
+    +monospace-family
 
 footer
   +full
