--- a/views/schedule.haml
+++ b/views/schedule.haml
@@ -25,4 +25,10 @@
     Score:
   .score
     = schedule.score.to_i
-  
+
+<!-- Grab Google CDN's jQuery. fall back to local if necessary -->
+%script{:src=>"//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"}
+%script
+  :plain
+    !window.jQuery && document.write(unescape('%3Cscript src="/js/jquery-1.5.1.min.js"%3E%3C/script%3E'))
+%script{:src=>"/js/script.js"}
