layout for the mails, a create link to easier creation of send in schedules; author and email to schedule
Signed-off-by: sch1zo <andreas.eger.reg@googlemail.com>

--- a/views/schedule.haml
+++ b/views/schedule.haml
@@ -5,7 +5,9 @@
   %small
     .tags= schedule.linked_tags
     = schedule.created_at.strftime '%d.%m.%y | %H:%M'
-      
+    %br
+    = schedule.author
+    = "(#{schedule.email})"
   %ul.items.mono
     -for item in items
       %li{:class=>"level#{item.level}"}
